--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.17",
     "aos": "^2.3.4",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.17"
   },
