--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.17",
     "aos": "^2.3.4",
+    "axios": "^1.8.4",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.17",
